<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    tools:context=".data.movieDetails.MovieDetailsActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/backdrop_path"
            android:contentDescription="@string/backgroundposter"
            android:minHeight="260dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="fitXY"
            android:layout_marginBottom="50dp"
            tools:src="@drawable/ic_launcher_background"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/poster_path"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/movieposter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/overview"
            android:scaleType="fitXY"
            tools:src="@drawable/ic_launcher_background"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/overview"
            android:id="@+id/overview"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="12dp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/backdrop_path"/>

        <Button
            android:id="@+id/bookmark"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/baseline_bookmark_border_24"
            app:layout_constraintEnd_toStartOf="@id/share"
            app:layout_constraintTop_toBottomOf="@id/backdrop_path"/>

        <Button
            android:id="@+id/share"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/share_1_svgrepo_com"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backdrop_path"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="overview Details"
            android:minLines="5"
            android:id="@+id/overview_detail"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/title"
            android:id="@+id/title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/overview_detail"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="tagLine Details"
            android:id="@+id/movie_name"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/status"
            android:id="@+id/status"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/movie_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="status"
            android:id="@+id/statusDetails"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/status"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/releaseDate"
            android:id="@+id/releaseDate"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/statusDetails"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="release date"
            android:id="@+id/releaseDateDetails"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/releaseDate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/voteAverage"
            android:id="@+id/vote_average"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/releaseDateDetails"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="7.1"
            android:id="@+id/vote_average_detail"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="@id/poster_path"
            app:layout_constraintTop_toBottomOf="@id/vote_average"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>